force-app/main/default/objects/Public_Document_Registration__c/Public_Document_Registration__c.object-meta.xml
<CustomObject>
    <label>Public Document Registration</label>
    <nameField>
        <displayFormat>PDR-{000000}</displayFormat>
        <label>Public Document Registration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Public Document Registrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>