force-app/main/default/objects/Public_Document_Registration__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Public Document Registrations</relationshipLabel>
    <relationshipName>Public_Document_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>