force-app/main/default/objects/Public_Document_Registration__c/fields/Completed_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Completed_By_Name__c</fullName>
    <formula>Completed_By__r.FirstName  &amp;&quot; &quot;&amp; Completed_By__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completed By Name</label>
    <type>Text</type>
</CustomField>