force-app/main/default/objects/Public_Document_Registration__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Public Document Registrations</relationshipLabel>
    <relationshipName>Public_Document_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>