force-app/main/default/objects/Public_Document_Registration__c/fields/Document_Registered__c.field-meta.xml
<CustomField>
    <fullName>Document_Registered__c</fullName>
    <label>Document Registered</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Future Power of Attorney</fullName>
            </value>
            <value>
                <fullName>Prenuptial Agreement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>