force-app/main/default/objects/Public_Document_Registration__c/fields/Journal__c.field-meta.xml
<CustomField>
    <fullName>Journal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Journal</label>
    <referenceTo>Journal__c</referenceTo>
    <relationshipLabel>Public Document Registrations</relationshipLabel>
    <relationshipName>Public_Document_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>