force-app/main/default/objects/Public_Document_Registration__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Public Document Registrations</relationshipLabel>
    <relationshipName>Public_Document_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>