force-app/main/default/objects/Public_Document_Registration__c/fields/Order_Product__c.field-meta.xml
<CustomField>
    <fullName>Order_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Public Document Registrations</relationshipLabel>
    <relationshipName>Public_Document_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>