force-app/main/default/objects/Public_Document_Registration__c/fields/Shared_Document__c.field-meta.xml
<CustomField>
    <fullName>Shared_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shared Document</label>
    <referenceTo>Shared_Document__c</referenceTo>
    <relationshipLabel>Public Document Registrations</relationshipLabel>
    <relationshipName>Public_Document_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>