force-app/main/default/objects/Public_Document_Registration__c/fields/Shared_Document_Status__c.field-meta.xml
<CustomField>
    <fullName>Shared_Document_Status__c</fullName>
    <formula>TEXT(Shared_Document__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shared Document Status</label>
    <type>Text</type>
</CustomField>