force-app/main/default/objects/Public_Document_Registration__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting Document Approval</fullName>
                <default>true</default>
                <label>Awaiting Document Approval</label>
            </value>
            <value>
                <fullName>Ready for Public Registration</fullName>
            </value>
            <value>
                <fullName>Lacking Information</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Out of Process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>