force-app/main/default/objects/Public_Document_Registration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Quantity__c</columns>
    <columns>Status__c</columns>
    <columns>Account__c</columns>
    <columns>Journal__c</columns>
    <columns>Order__c</columns>
    <columns>Order_Product__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>