force-app/main/default/objects/Public_Document_Registration__c/listViews/Completed_Registrations.listView-meta.xml
<ListView>
    <fullName>Completed_Registrations</fullName>
    <columns>Completed_Time__c</columns>
    <columns>Completed_By__c</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Journal__c</columns>
    <columns>Order__c</columns>
    <columns>Order_Product__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>Completed Registrations</label>
</ListView>