force-app/main/default/objects/Public_Document_Registration__c/listViews/Registrations_Awaiting_Customer_Approval.listView-meta.xml
<ListView>
    <fullName>Registrations_Awaiting_Customer_Approval</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Account__c</columns>
    <columns>Journal__c</columns>
    <columns>Order__c</columns>
    <columns>Order_Product__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Awaiting Document Approval</value>
    </filters>
    <label>Registrations Awaiting Customer Approval</label>
</ListView>