force-app/main/default/objects/Public_Document_Registration__c/listViews/Registrations_Ready_for_Submission.listView-meta.xml
<ListView>
    <fullName>Registrations_Ready_for_Submission</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Account__c</columns>
    <columns>Journal__c</columns>
    <columns>Order__c</columns>
    <columns>Order_Product__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Ready for Public Registration</value>
    </filters>
    <label>Registrations Ready for Submission</label>
</ListView>