force-app/main/default/objects/Public_Document_Registration__c/listViews/Registrations_without_Journals.listView-meta.xml
<ListView>
    <fullName>Registrations_without_Journals</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Account__c</columns>
    <columns>Journal__c</columns>
    <columns>Order__c</columns>
    <columns>Order_Product__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Journal__c</field>
        <operation>equals</operation>
    </filters>
    <label>Registrations without Journals</label>
</ListView>